# rustic-c

./: .gitignore  Cargo.toml  HOW_ITS_MADE.md  LICENSE  README.md
c-macro/: Cargo.toml
c-macro/src/: lib.rs
runtime-c/: Cargo.toml
runtime-c/src/: lib.rs
test-app/: Cargo.toml
test-app/src/: main.rs
