[package]
name = "c-macro"
version = "0.1.0"
edition = "2021"
description = "You cannot kill me in a way that matters."
tags = ["crimes"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.15"
